--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,9 @@
 ^sankey\.Rproj$
 ^\.Rproj\.user$
+^srcjs$
+^node_modules$
+^package\.json$
+^package-lock\.json$
+^webpack\.dev\.js$
+^webpack\.prod\.js$
+^webpack\.common\.js$
