--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "d3-sankey": "^0.12.3"
   }
 }
